# CRM-Skynet-Provider-SQLite_FastAPI

./: pyproject.toml  readme.md  skynet.md
data/: chamados.csv
db/: Skynet.db
notebook/: skynet.ipynb
notebook/.ipynb_checkpoints/: skynet-checkpoint.ipynb
src/: app.py  criar_bd.py  view_client_info.py
